--- a/Ansible/lab11/ansible.cfg
+++ b/Ansible/lab11/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
-remote_user= ubuntu 
+[defaults]
+inventory = ./aws_ec2.yml      
+host_key_checking = False
+remote_user = ubuntu
 private_key_file = ./NTI.pem
