--- a/CI_CD with Jenkins/lab23/Jenkinsfile
+++ b/CI_CD with Jenkins/lab23/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git branch: 'main', url: 'https://github.com/MariamWafik349/test.git'
+                git branch: 'main', url: 'https://github.com/MariamWafik349/jenkins.git'
             }
         }
 
