--- a/CI_CD with Jenkins/lab24/Jenkinsfile
+++ b/CI_CD with Jenkins/lab24/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git branch: 'main', url: ''
+                git branch: 'main', url: 'https://github.com/MariamWafik349/jenkins.git'
             }
         }
 
